--- a/code/iantest.csproj
+++ b/code/iantest.csproj
@@ -40,7 +40,7 @@
 	</ItemGroup>
 
   <ItemGroup>
-<ProjectReference Include="D:\Steam\steamapps\common\sbox\addons\base\code\base.csproj" />
+<ProjectReference Include="E:\Steam Spel\steamapps\common\sbox\addons\base\code\base.csproj" />
   </ItemGroup>
 
 </Project>
