--- a/code/Properties/launchSettings.json
+++ b/code/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "sandbox": {
+    "sandbox_vr": {
       "commandName": "Executable",
-      "executablePath": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\sbox\\sbox.exe",
+      "executablePath": "E:\\Steam\\steamapps\\common\\sbox\\sbox.exe",
       "commandLineArgs": "\u002Bdeveloper 1 -w 1920 -h 1080 -noassert -tools"
     }
   }
