--- a/code/iantest.csproj
+++ b/code/iantest.csproj
@@ -31,13 +31,13 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<Analyzer Include="..\..\..\bin\managed\Sandbox.Generator.dll"/>
-		<Reference Include="..\..\..\bin\managed/Sandbox.System.dll" />
-		<Reference Include="..\..\..\bin\managed/Sandbox.Engine.dll" />
-		<Reference Include="..\..\..\bin\managed/Sandbox.Game.dll" />
-		<Reference Include="..\..\..\bin\managed/Sandbox.Event.dll" />
-		<Reference Include="..\..\..\bin\managed/Sandbox.Bind.dll" />
-		<Reference Include="..\..\..\bin\managed/Sandbox.Reflection.dll" />
+		<Analyzer Include="..\..\..\..\Steam\steamapps\common\sbox\bin\managed\Sandbox.Generator.dll"/>
+		<Reference Include="..\..\..\..\Steam\steamapps\common\sbox\bin\managed/Sandbox.System.dll" />
+		<Reference Include="..\..\..\..\Steam\steamapps\common\sbox\bin\managed/Sandbox.Engine.dll" />
+		<Reference Include="..\..\..\..\Steam\steamapps\common\sbox\bin\managed/Sandbox.Game.dll" />
+		<Reference Include="..\..\..\..\Steam\steamapps\common\sbox\bin\managed/Sandbox.Event.dll" />
+		<Reference Include="..\..\..\..\Steam\steamapps\common\sbox\bin\managed/Sandbox.Bind.dll" />
+		<Reference Include="..\..\..\..\Steam\steamapps\common\sbox\bin\managed/Sandbox.Reflection.dll" />
 	</ItemGroup>
 
   <ItemGroup>
