--- a/code/iantest.csproj
+++ b/code/iantest.csproj
@@ -24,8 +24,8 @@
 	</ItemGroup>
 
   <PropertyGroup>
-	<OutputPath>../.vs/output/</OutputPath>
-	<DocumentationFile>../.vs/output/iantest.xml</DocumentationFile>
+	<OutputPath>..\..\..\..\Steam\steamapps\common\sbox/.vs/output/</OutputPath>
+	<DocumentationFile>..\..\..\..\Steam\steamapps\common\sbox/.vs/output/iantest.xml</DocumentationFile>
 	<RootNamespace>Sandbox</RootNamespace>
 	<Nullable>disable</Nullable>
   </PropertyGroup>
